# feishumind

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_PUBLISH_GUIDE.md  FINAL_REPORT.md  LICENSE  OPENSOURCE_SUMMARY.md  QUICKSTART_OPENSOURCE.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  SECURITY.md  TASK_COMPLETION_REPORT.md  auto-log.md  docker-compose.alpha.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  session-report-20260206.md
.github/: FINISH_RELEASE.md  PROJECT_SETUP.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
deployments/nginx/: nginx.conf
deployments/prometheus/: prometheus.yml
docs/: README.md  chat1.md  current-status.md  demo-scenarios.md  deployment-checklist.md  deployment-guide.md  kaifa.md  opensource-checklist.md  performance-optimization.md  quick-start.md  release-guide.md  release-notes.md  session-recovery-demo.md  shuoming.md  user-testing-guide.md
docs/spec/: 00-overview.md  01-architecture.md  02-api-spec.md  03-coding-standards.md
docs/todo/: roadmap.md  weekly-sprint.md
examples/: basic_usage.py  curl_examples.sh
reports/: bug-fixes.md  environment-verification.md  final-optimization-summary.md  issue-fixes-summary.md  optimization-report.md  performance-benchmark.md  real-environment-test.md  security-audit.md  test-coverage-report.md  user-testing-report.md  week3-final-report.md  week4-final-report.md
scripts/: check_code_quality.py  check_dependencies.py  configure_github.sh  deploy.sh  performance_benchmark.py  quick_test.sh  restore-session.sh  rollback.sh  run_all_tests.sh  setup_test_env.sh
src/agent/: a2a.py  graph.py  nodes.py  state.py  tools.py
src/agent/tool_modules/: event_reminder.py
src/api/: main.py
src/api/middleware/: logging.py  performance.py  security.py
src/api/routes/: agent.py  calendar.py  github.py  memory.py  resilience.py  webhook.py
src/integrations/feishu/: calendar.py  cards.py  client.py  crypto.py  crypto_sdk.py
src/integrations/github/: __init__.py  client.py  models.py
src/memory/: client.py  config.py
src/utils/: cache.py  config.py  logger.py  monitoring.py  nlp.py  resilience.py  scheduler.py  sentiment.py
templates/: feedback-form.md
tests/: final-test-report.md
tests/api/: test_agent_routes.py  test_calendar_routes.py  test_github_routes.py  test_memory_routes.py  test_resilience_routes.py  test_webhook_routes.py
tests/integration/: test_api_integration.py  test_e2e.py  test_github_integration.py
tests/performance/: test_performance.py
tests/unit/: test_agent_graph.py  test_agent_nodes.py  test_event_reminder_tool.py  test_feishu_client.py  test_feishu_crypto.py  test_github_client.py  test_github_routes.py  test_memory_client.py  test_nlp_parser.py  test_resilience.py  test_sentiment.py
