[tool.poetry]
name = "feishumind"
version = "0.1.0"
description = "飞书灵犀 - 半自主AI代理系统，有情商的职场参谋"
authors = ["FeishuMind Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
# 核心框架
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.12"
# AI/ML框架
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
# 记忆系统
mem0ai = "^0.1.0"
faiss-cpu = "^1.8.0"
# 集成工具
httpx = "^0.28.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
# 工具库
loguru = "^0.7.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
# 测试工具
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
# 代码质量
black = {extras = ["d"], version = "^24.10.0"}
isort = "^5.13.0"
mypy = "^1.13.0"
ruff = "^0.8.0"
# 类型检查
types-requests = "^2.32.0"

[tool.poetry.scripts]
feishumind = "src.api.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============ Black 配置 ============
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 默认排除
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # 项目特定排除
)/
'''

# ============ isort 配置 ============
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = [".venv", "venv"]

# ============ MyPy 配置 ============
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # 严格模式：禁止未类型化的定义
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "mem0.*",
    "faiss.*",
    "langgraph.*",
    "langchain.*",
]
ignore_missing_imports = true

# ============ Ruff 配置 ============
[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]  # 允许测试中使用未使用的参数和assert

# ============ Pytest 配置 ============
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",  # 覆盖率要求 >80%
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
